--- a/VChuang/res/values/strings.xml
+++ b/VChuang/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="load_more_text">正在加载...</string>
     <string name="title_activity_project">ProjectActivity</string>
+    <string name="title_activity_investor">InvestorActivity</string>
 
 </resources>
