--- a/VChuang/res/values/strings.xml
+++ b/VChuang/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="load_more_text">正在加载...</string>
+    <string name="title_activity_project">ProjectActivity</string>
+    <string name="title_activity_investor">InvestorActivity</string>
 
 </resources>
