贾雅宇 11.4版    添加ActiveAdapter和ProjectAdapter两个Adapter ；  添加SearchActivity

--- a/VChuang/res/values/strings.xml
+++ b/VChuang/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="load_more_text">正在加载...</string>
     <string name="title_activity_project">ProjectActivity</string>
     <string name="title_activity_investor">InvestorActivity</string>
+    <string name="title_activity_search">SearchActivity</string>
+    <string name="title_activity_lunbotu">LunbotuActivity</string>
 
 </resources>
