--- a/VChuang/res/values/strings.xml
+++ b/VChuang/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">TabLayout</string>
+    <string name="app_name">V创</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="load_more_text">正在加载...</string>
@@ -13,4 +13,17 @@
     <string name="title_activity_my_invest">MyInvestActivity</string>
     <string name="title_activity_create_project">CreateProjectActivity</string>
     <string name="title_activity_team">TeamActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_personcenter">PersoncenterActivity</string>
+    <string name="title_activity_regist">RegistActivity</string>
+    <string name="title_activity_test">TestActivity</string>
+    <string name="title_activity_friends">FriendsActivity</string>
+    <string name="title_activity_friend">FriendActivity</string>
+    <string name="title_activity_stretch_view">StretchViewActivity</string>
+    <string name="title_activity_operation">OperationActivity</string>
+    <string name="title_activity_setting">SettingActivity</string>
+    <string name="title_activity_bianji">BianjiActivity</string>
+    <string name="title_activity_mymsg">MymsgActivity</string>
+    <string name="title_activity_shou_cang">ShouCangActivity</string>
 </resources>
